# Shamir-Secret-Sharing-Algorithm

./: CMakeLists.txt  README.md
include/: galois.c  galois.h  shamir.c  shamir.h
src/: header.h  shamir_secret_sharing.c
